Base Dungeon micro-service
